--- a/app/src/main/res/layout/listview_main_item.xml
+++ b/app/src/main/res/layout/listview_main_item.xml
@@ -35,11 +35,13 @@
         android:textSize="20sp"
         />
 </LinearLayout>
+
     <TextView
         android:id="@+id/tv_main_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="问题标题"
         android:textSize="20sp"
-        android:layout_marginLeft="50px"/>
+        android:layout_marginLeft="50px"
+        android:visibility="invisible"/>
 </LinearLayout>
