--- a/app/src/main/res/layout/expandlistview_wwytpj_head.xml
+++ b/app/src/main/res/layout/expandlistview_wwytpj_head.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="问题标题"
+            android:text="安全U盘制作"
             android:layout_gravity="center"
             android:textSize="16sp"
             android:textColor="@color/black"/>
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
-            android:text="联系人"
+            android:text="刘星"
             android:textSize="16sp"
             android:textColor="@color/black"/>
     </LinearLayout>
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="联系电话"
+            android:text="3425"
             android:textSize="16sp"
             android:textColor="@color/black"/>
     </LinearLayout>
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="发生地点"
+            android:text="A座807"
             android:textSize="16sp"
             android:textColor="@color/black"/>
     </LinearLayout>
@@ -114,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="总分"
+            android:text="72"
             android:textSize="16sp"
             android:textColor="@color/black"/>
     </LinearLayout>
