--- a/app/src/main/res/layout/fragment_gdcl.xml
+++ b/app/src/main/res/layout/fragment_gdcl.xml
@@ -47,12 +47,13 @@
             android:layout_width="250px"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="发生地点"
+            android:text="发生时间"
             android:textSize="16sp"
             android:textColor="@color/white"/>
         <TextView
             android:layout_marginLeft="1px"
-            android:layout_width="170px"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="工单状态"
