--- a/app/src/main/res/layout/fragment_gdtb.xml
+++ b/app/src/main/res/layout/fragment_gdtb.xml
@@ -46,7 +46,7 @@
         android:layout_width="250px"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="发生地点"
+        android:text="发生时间"
         android:textSize="16sp"
         android:textColor="@color/white"/>
     <TextView
@@ -59,7 +59,8 @@
         android:textColor="@color/white"/>
     <TextView
         android:layout_marginLeft="8px"
-        android:layout_width="170px"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="紧急程度"
