--- a/app/src/main/res/layout/listview_fxwt_item.xml
+++ b/app/src/main/res/layout/listview_fxwt_item.xml
@@ -16,7 +16,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="14sp"
-            android:text="巡检单位"
+            android:text="信息通信运检中心"
             android:background="#EAF1F9"/>
         <TextView
             android:layout_marginLeft="2px"
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="14sp"
-            android:text="通信站"/>
+            android:text="500kV大泽变"/>
         <TextView
             android:layout_marginLeft="2px"
             android:background="#EAF1F9"
@@ -37,7 +37,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="14sp"
-            android:text="检查时间"/>
+            android:text="2016.11.15"/>
         <TextView
             android:layout_marginLeft="2px"
             android:background="#EAF1F9"
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="14sp"
-            android:text="检查负责人"/>
+            android:text="张铎"/>
         <TextView
             android:layout_marginLeft="2px"
             android:background="#EAF1F9"
@@ -57,7 +57,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="14sp"
-            android:text="检测项目"/>
+            android:text="机房空调运行情况"/>
 
 
             <TextView
@@ -67,7 +67,7 @@
                 android:layout_weight="2"
                 android:layout_height="match_parent"
                 android:textSize="14sp"
-                android:text="异常原因"
+                android:text="空调异响"
                 android:background="#EAF1F9"
                 android:gravity="center"/>
 
@@ -79,7 +79,7 @@
             android:layout_weight="0.8"
             android:layout_height="match_parent"
             android:textSize="14sp"
-            android:text="是否已消缺"
+            android:text="是"
             android:background="#EAF1F9"
             android:gravity="center"/>
 
