--- a/app/src/main/res/layout/listview_gdps_item.xml
+++ b/app/src/main/res/layout/listview_gdps_item.xml
@@ -104,6 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="vertical"
+                android:gravity="center_vertical"
                 android:singleLine="false"
                 android:textSize="17sp"/>
         </LinearLayout>
