--- a/app/src/main/res/layout/listview_xjyw_default_item.xml
+++ b/app/src/main/res/layout/listview_xjyw_default_item.xml
@@ -17,7 +17,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="16sp"
-            android:text="巡检单位"
+            android:text="信息通信运检中心"
             android:background="#EAF1F9"/>
         <TextView
             android:layout_marginLeft="2px"
@@ -28,7 +28,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="16sp"
-            android:text="通信站"/>
+            android:text="500kV大泽变"/>
         <TextView
             android:layout_marginLeft="2px"
             android:background="#EAF1F9"
@@ -38,7 +38,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="16sp"
-            android:text="检查时间"/>
+            android:text="2016.11.15"/>
         <TextView
             android:layout_marginLeft="2px"
             android:background="#EAF1F9"
@@ -48,7 +48,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="16sp"
-            android:text="检查负责人"/>
+            android:text="张铎"/>
         <TextView
             android:layout_marginLeft="2px"
             android:background="#EAF1F9"
@@ -58,7 +58,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="16sp"
-            android:text="状态"/>
+            android:text="结束"/>
         <TextView
             android:layout_marginLeft="2px"
             android:background="#EAF1F9"
@@ -68,7 +68,7 @@
             android:gravity="center"
             android:layout_height="match_parent"
             android:textSize="16sp"
-            android:text="巡检类型"/>
+            android:text="巡检业务"/>
         <LinearLayout
             android:layout_marginLeft="2px"
             android:background="#EAF1F9"
